# 1bitshit_auto_loader-bkg

./: .gitignore  Cargo.toml  README.md  install.cmd  install.ps1  install.sh  package.json  update.cmd  update.ps1  update.sh
src/: lib.rs  registry.rs
