[package]
name = "bitshit-auto-loader"
version = "0.1.0"
edition = "2021"
authors = ["BitShit"]
description = "Auto-loader: installs, updates, and orchestrates the bitshit modular stack (kernel, driver, engine, cli)."
license = "MIT"

[[bin]]
name = "bitshit-auto-loader"
path = "src/bin/auto_loader.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.37", features = ["full"] }
bitshit-shared = { git = "https://github.com/eyshoit-commits/1bitshit_kernel-bkg", package = "bitshit-shared", branch = "main" }
