[package]
name = "bitshit-auto-loader"
version = "0.2.3"
edition = "2021"
authors = ["BitShit"]
description = "Cross-platform ASCII terminal manager for the modular BitShit stack."
license = "MIT"

[[bin]]
name = "bitshit-auto-loader"
path = "src/bin/auto_loader.rs"

[[bin]]
name = "bitshit-manager"
path = "src/bin/bitshit_manager.rs"

[[bin]]
name = "bitshit-installer"
path = "src/bin/installer_gui.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.37", features = ["full"] }
inquire = "0.7"
fs2 = "0.4"
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
sysinfo = "0.33"
bitshit-shared = { git = "https://github.com/eyshoit-commits/1bitshit_kernel-bkg", package = "bitshit-shared", branch = "main" }
